--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -2,15 +2,16 @@
 @use "mixins";
 
 .footer {
+  padding: 40px 0 10px 0;
   background-color: var.$popup-color;
 
   &__title {
     overflow-y: hidden;
     font-family: var.$title-font;
-    font-size: 2rem;
-    margin-bottom: 10px;
+    font-size: 1rem;
+    margin-bottom: 5px;
     @include mixins.for-size(laptop) {
-      font-size: 3rem;
+      font-size: 2rem;
       margin-left: 100px;
       margin-bottom: 20px;
     }
@@ -27,11 +28,11 @@
 
   &__li {
     font-family: var.$font;
-    font-size: 1.2rem;
+    font-size: 1rem;
     list-style: none;
     margin-top: 15px;
     @include mixins.for-size(laptop) {
-      font-size: 2rem;
+      font-size: 1.5rem;
     }
 
     a {
@@ -76,13 +77,13 @@
     }
 
     a {
-      font-size: 1.3rem;
+      font-size: 1rem;
       margin: 0 10px 10px 0;
       text-align: center;
       line-height: 40px;
       color: var.$secondary-color;
       @include mixins.for-size(laptop) {
-        font-size: 2rem;
+        font-size: 1.5rem;
       }
 
       &:hover {
@@ -90,10 +91,10 @@
       }
 
       i {
-        font-size: 2rem;
+        font-size: 1.5rem;
         padding-right: 5px;
         @include mixins.for-size(tablet) {
-          font-size: 2.5rem;
+          font-size: 2rem;
           padding-right: 10px;
         }
       }
@@ -114,12 +115,12 @@
 .copyright {
   display: flex;
   justify-content: center;
-  font-size: 1.5rem;
+  font-size: 1rem;
   margin-top: 2rem;
   color: var.$secondary-color;
   margin-bottom: 3rem;
   @include mixins.for-size(tablet) {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
   }
 }
 
@@ -127,9 +128,9 @@
 .fa-envelope,
 .fa-map-marker {
   padding-right: 5px;
-  font-size: 2rem;
+  font-size: 1.5rem;
   @include mixins.for-size(tablet) {
-    font-size: 3rem;
+    font-size: 2rem;
     padding-right: 10px;
   }
 }
