--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -37,6 +37,13 @@ html {
     width: 100%;
   }
 
+  &__logo {
+    font-size: 2.5rem;
+    font-family: var.$title-font;
+    color: var.$secondary-color;
+    font-style: italic;
+  }
+
   a {
     text-decoration: none;
     color: var.$secondary-color;
