--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -14,9 +14,9 @@
     height: 5vh;
   }
   @include mixins.for-size(laptop) {
-    width: 20vw;
-    height: 7vh;
-    margin: 20px;
+    width: auto;
+    height: auto;
+    margin: 0 5px;
   }
 }
 .sort__btn,
@@ -26,13 +26,51 @@
   @include mixins.for-size(tablet) {
     font-size: 2rem;
   }
+  @include mixins.for-size(laptop) {
+    font-size: 1.1rem;
+    padding: 0.5rem 1.2rem;
+    margin: 0;
+  }
+}
+
+// Dropdown menu items styling for desktop
+.dropdown-menu {
+  @include mixins.for-size(laptop) {
+    font-size: 1.2rem;
+
+    .dropdown-item {
+      padding: 0.6rem 1.2rem;
+      font-size: 1.2rem;
+    }
+  }
 }
 
 .row {
   display: flex;
   justify-content: center;
   @include mixins.for-size(laptop) {
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 0;
+  }
+}
+
+.selections {
+  margin: 20px 0;
+  padding: 20px 0;
+
+  @include mixins.for-size(laptop) {
+    margin: 60px 0 40px 0;
+    padding: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 3rem;
+  }
+
+  .badge {
+    font-size: 0.9rem;
+    padding: 0.5rem 1rem;
+    font-weight: 500;
   }
 }
 
